# AnchorLink

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml  start.sh  tushare_proxy.py
.claude/: settings.local.json
config/: pools.yaml
docs/: PRD.md  analysis_242d_answers.md  analysis_framework.md  architecture.md  ashare-chat-analysis.md  backtest-report.md  blt_research_findings.md  blt_stock_pool_redefinition.md  calibration_report.html  capability_inventory.csv  daily_brief_20260520.md  daily_report_20260526.md  data-dictionary.md  data_architecture.md  demo-quant-rigor.html  file_structure.md  glossary.md  history-guide.md  history-page-product-demo.html  history_analysis_design.md  history_analysis_optimization_plan.md  history_analysis_report.md  history_operator_workbench_plan.md  implementation.md  learning_path.md  prd.md  prd_business_review.md  project_audit_report.md  quant-analysis-for-beginners.md  quant-analysis-report.md  quant_research_report.md  (+17 more)
space-intel/: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
space-intel/.claude/memory/: MEMORY.md
space-intel/.claude/plans/: .gitkeep  daily-report-optimization.md  multi-metric-valuation.md
space-intel/src/: evaluate_stock.py  validate_signals.py
space-intel/src/dailyreport/: reporter.py  review_stock_pool.py  run.py
space-intel/src/news/: __init__.py  data_product.py  event_layer.py  run.py
space-intel/src/price/: analyzer.py  rebound_watch_layer.py  rolling_analyzer.py  run.py
space-intel/src/shared/: __init__.py  config.py
(+344 files in other folders)
