[project]
name = "anchorlink"
version = "0.1.0"
description = "锚定联动分析系统 - 锚定公司与板块联动对比"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.14.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "tushare>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
