[project]
name = "space-intel"
version = "0.1.0"
description = "商业航天板块每日复盘工具"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.12.0",
    "dashscope>=1.14.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "tushare>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
